--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link rel="stylesheet" href="./css/reset.css">
   <link rel="stylesheet" href="./css/styles.css" />
+  <link rel="stylesheet" href="./css/modal.css" />
 </head>
 
 <body class="page">
@@ -52,14 +53,14 @@
             </svg>+38 096 111 11 11</a>
         </li>
       </ul>
-
     </div>
   </header>
+
   <main class="main">
     <section class="section hero">
       <div class="container hero">
         <h1 class="hero__title">Ефективні рішення для вашого бізнесу</h1>
-        <button type="button" class="button hero__button">
+        <button class="button hero__button" data-modal-open>
           Замовити послугу
         </button>
       </div>
@@ -123,13 +124,21 @@
         <h2 class="title works__title">Чим ми займаємося</h2>
         <ul class="work__list list">
           <li class="works__item">
-            <img class="works__img" src="images/coding.jpg" alt="Кодування" width="370" />
+            <div class="works__thumb">
+              <img class="works__img" src="images/coding.jpg" alt="Кодування" width="370" />
+              <p class="works__desc">Десктопні додатки</p>
+            </div>
           </li>
           <li class="works__item">
-            <img class="works__img" src="images/designining.jpg" alt="Веб-розробка для телефонов" width="370" />
+            <div class="works__thumb"><img class="works__img" src="images/designining.jpg"
+                alt="Веб-розробка для телефонов" width="370" />
+              <p class="works__desc">Мобільні додатки</p>
+            </div>
           </li>
           <li class="works__item">
-            <img class="works__img" src="images/coloring.jpg" alt="Стилізація" width="370" />
+            <div class="works__thumb"><img class="works__img" src="images/coloring.jpg" alt="Стилізація" width="370" />
+              <p class="works__desc">Дизайнерські рішення</p>
+            </div>
           </li>
         </ul>
       </div>
@@ -359,6 +368,20 @@
       </div>
     </div>
   </footer>
+
+
+  <div class="backdrop is-hidden" data-modal>
+    <div class="modal__window">
+      <button class="modal__close" data-modal-close>
+        <!-- <img src="./images/close-button.png" alt="кнопка закриття вікна"> -->
+        <svg class="close__button" width="11" height="11">
+          <use href="./images/icons.svg#button-close"></use>
+        </svg>
+      </button>
+    </div>
+
+  </div>
+  <script src="./js/modal.js"></script>
 
 </body>
 
