--- a/portfolio.html
+++ b/portfolio.html
@@ -83,7 +83,12 @@
         </ul>
         <ul class="cards list">
           <li class="card">
-            <a href="#" class="card__link link"><img src="./images/laptop.jpg" alt="Технокряк" width="370" />
+            <a href="#" class="card__link link">
+              <div class="card__thumb"><img src="./images/laptop.jpg" alt="Технокряк" width="370" />
+                <p class="card__overlay">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
+                  Все це дозволить відвідувачу отримати
+                  вичерпні відомості про компанію або приватну особу.</p>
+              </div>
               <div class="card__container">
                 <h2 class="card__title">Технокряк</h2>
                 <p class="card__descr">Веб-сайт</p>
@@ -92,8 +97,12 @@
           </li>
           <li class="card">
             <a href="#" class="card__link link">
-              <img class="card__img" src="./images/basketball.jpg" alt="Дизайн Постер New Orlean vs Golden Star"
-                width="370" />
+              <div class="card__thumb"><img class="card__img" src="./images/basketball.jpg"
+                  alt="Дизайн Постер New Orlean vs Golden Star" width="370" />
+                <p class="card__overlay">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
+                  Все це дозволить відвідувачу отримати
+                  вичерпні відомості про компанію або приватну особу.</p>
+              </div>
               <div class="card__container">
                 <h2 class="card__title">
                   Постер <span lang="en">New Orlean vs Golden Star</span>
@@ -103,8 +112,13 @@
             </a>
           </li>
           <li class="card">
-            <a href="#" class="card__link link"><img class="card__img" src="./images/seafoodlogo.jpg"
-                alt="Додаток Ресторан Seafood" width="370" />
+            <a href="#" class="card__link link">
+              <div class="card__thumb"><img class="card__img" src="./images/seafoodlogo.jpg"
+                  alt="Додаток Ресторан Seafood" width="370" />
+                <p class="card__overlay">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
+                  Все це дозволить відвідувачу отримати
+                  вичерпні відомості про компанію або приватну особу.</p>
+              </div>
               <div class="card__container">
                 <h2 class="card__title">
                   Ресторан <span lang="en">Seafood</span>
@@ -114,8 +128,14 @@
             </a>
           </li>
           <li class="card">
-            <a href="#" class="card__link link"><img class="card__img" src="./images/headphones.jpg"
-                alt="Маркетинг Проєкт Prime" width="370" />
+            <a href="#" class="card__link link">
+              <div class="card__thumb"><img class="card__img" src="./images/headphones.jpg" alt="Маркетинг Проєкт Prime"
+                  width="370" />
+                <p class="card__overlay">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
+                  Все це дозволить відвідувачу отримати
+                  вичерпні відомості про компанію або приватну особу.</p>
+              </div>
+
               <div class="card__container">
                 <h2 class="card__title">Проєкт <span lang="en">Prime</span></h2>
                 <p class="card__descr">Маркетинг</p>
@@ -124,7 +144,13 @@
           </li>
           <li class="card">
             <a href="#" class="card__link link">
-              <img class="card__img" src="./images/briks.jpg" alt=" Додаток Проєкт Boxes" width="370" />
+
+              <div class="card__thumb"><img class="card__img" src="./images/briks.jpg" alt=" Додаток Проєкт Boxes"
+                  width="370" />
+                <p class="card__overlay">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
+                  Все це дозволить відвідувачу отримати
+                  вичерпні відомості про компанію або приватну особу.</p>
+              </div>
               <div class="card__container">
                 <h2 class="card__title">Проєкт <span lang="en">Boxes</span></h2>
                 <p class="card__descr">Додаток</p>
@@ -133,7 +159,13 @@
           </li>
           <li class="card">
             <a href="#" class="card__link link">
-              <img class="card__img" src="./images/monitor.jpg" alt="Веб-сайт Inspiration has no Borders" width="370" />
+              <div class="card__thumb"><img class="card__img" src="./images/monitor.jpg"
+                  alt="Веб-сайт Inspiration has no Borders" width="370" />
+                <p class="card__overlay">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
+                  Все це дозволить відвідувачу отримати
+                  вичерпні відомості про компанію або приватну особу.</p>
+              </div>
+
               <div class="card__container">
                 <h2 class="card__title">
                   <span lang="en">Inspiration has no Borders</span>
@@ -144,7 +176,13 @@
           </li>
           <li class="card">
             <a href="#" class="card__link link">
-              <img class="card__img" src="./images/book.jpg" alt="Дизайн видавництва Limited Edition" width="370" />
+              <div class="card__thumb"><img class="card__img" src="./images/book.jpg"
+                  alt="Дизайн видавництва Limited Edition" width="370" />
+                <p class="card__overlay">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
+                  Все це дозволить відвідувачу отримати
+                  вичерпні відомості про компанію або приватну особу.</p>
+              </div>
+
               <div class="card__container">
                 <h2 class="card__title">
                   Видавництво <span lang="en">Limited Edition</span>
@@ -155,7 +193,13 @@
           </li>
           <li class="card">
             <a href="#" class="card__link link">
-              <img class="card__img" src="./images/labeltag.jpg" alt="Маркетинг Проєкт LAB" width="370" />
+
+              <div class="card__thumb"><img class="card__img" src="./images/labeltag.jpg" alt="Маркетинг Проєкт LAB"
+                  width="370" />
+                <p class="card__overlay">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
+                  Все це дозволить відвідувачу отримати
+                  вичерпні відомості про компанію або приватну особу.</p>
+              </div>
               <div class="card__container">
                 <h2 class="card__title">Проєкт <span lang="en">LAB</span></h2>
                 <p class="card__descr">Маркетинг</p>
@@ -164,7 +208,13 @@
           </li>
           <li class="card">
             <a href="#" class="card__link link">
-              <img class="card__img" src="./images/codinglaptop.jpg" alt="Додаток Growing Business" width="370" />
+              <div class="card__thumb"><img class="card__img" src="./images/codinglaptop.jpg"
+                  alt="Додаток Growing Business" width="370" />
+                <p class="card__overlay">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
+                  Все це дозволить відвідувачу отримати
+                  вичерпні відомості про компанію або приватну особу.</p>
+              </div>
+
               <div class="card__container">
                 <h2 class="card__title">
                   <span lang="en">Growing Business</span>
